--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.0",
+    "typescript": "^5.1.6",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
