--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@beeper/matrix-widget-api": "^1.5.0",
+    "@beeper/matrix-widget-api": "^1.5.1",
     "@beeper/matrix-widget-toolkit-api": "^3.3.1",
     "@beeper/matrix-widget-toolkit-mui": "^1.2.1",
     "@beeper/matrix-widget-toolkit-react": "^1.0.8",
@@ -27,12 +27,14 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.2"
+    "@types/jest": "^29.5.2",
+    "@types/react-syntax-highlighter": "^15.5.7"
   }
 }
