--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "joi": "^17.9.2",
-    "next": "13.4.5",
+    "next": "^13.4.12",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
